fix (invisible actions menu): actions menu is correctly displayed (#482)
* fix: (invisible actions menu): actions menu is correctly displayed

The actions menu on the last blog post on the list is no longer invisible, promting the user to scroll a bit more down. Instead it faces upward.

* fix: (invisible actions menu): additional change

Now the actions menu for both the last and before last blog post is faced upward

--- a/components/reusable-components/reusable-dropdown/ReusableDropdown.module.scss
+++ b/components/reusable-components/reusable-dropdown/ReusableDropdown.module.scss
@@ -63,3 +63,10 @@
 .dropdownItemButton:hover {
   background-color: #f0f0f0;
 }
+
+tbody tr:last-child .dropdownList,
+tbody tr:nth-last-child(2) .dropdownList {
+  top: auto;
+  bottom: 100%;
+  margin-bottom: 5px;
+}
